fix: bug where all subscriptions (except SM with monitoringRef) were not created successfully