@@ -12,10 +12,8 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import uk.org.siri.siri10.ErrorConditionStructure;
 import uk.org.siri.siri21.*;
 
-import javax.xml.bind.JAXBElement;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.time.ZonedDateTime;
@@ -357,7 +355,7 @@ public class Utils {
         }
 
         if (siri.getSubscriptionResponse() != null && siri.getSubscriptionResponse().getResponseStatuses() != null) {
-            status = siri.getSubscriptionResponse().getResponseStatuses().get(0);
+            status = siri.getSubscriptionResponse().getResponseStatuses().getFirst();
         } else {
             status.setResponseTimestamp(ZonedDateTime.now());
             status.setStatus(false);
